ci: Update publish workflow

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -11,7 +11,38 @@ on:
       - "v*[0-9]+.[0-9]+.[0-9]+"
 
 jobs:
+  create-release:
+    name: create-release
+    runs-on: ubuntu-22.04
+    outputs:
+      upload_url: ${{ steps.release.outputs.upload_url }}
+      df_version: ${{ env.DF_VERSION }}
+    steps:
+      - name: Install Rust
+        uses: dtolnay/rust-toolchain@master
+        with:
+          toolchain: stable
+          target: ${{ matrix.target }}
+      - name: Get the release version from the tag
+        shell: bash
+        if: env.DF_VERSION == ''
+        run: |
+          DF_VERSION=$(cargo pkgid --manifest-path libDF/Cargo.toml | sed -e 's/^.*deep_filter@//g')
+          if [[ $DF_VERSION =~ ^.*-pre$ ]]; then DF_VERSION="$DF_VERSION"-"$(git rev-parse --short HEAD)"; fi
+          echo "DF_VERSION=$DF_VERSION"
+          echo "DF_VERSION=$DF_VERSION" >> $GITHUB_ENV
+      - name: Create Release
+        id: release
+        uses: actions/create-release@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          tag_name: ${{ env.DF_VERSION }}
+          release_name: ${{ env.DF_VERSION }}
+          draft: true
+
   build-libdf-wheels:
+    needs: ['create-release']
     runs-on: ${{ matrix.os }}
     container: ${{ matrix.container }}
     strategy:
@@ -89,27 +120,37 @@ jobs:
         if: matrix.os != 'windows-latest'
         run: |
           mkdir -p target/wheels
-          maturin build --release --target=${{ matrix.target }} -m ${{ matrix.df_wheel }}/Cargo.toml -i python${{ matrix.python.version }} -o target/wheels/
+          maturin build --profile=release-lto --target=${{ matrix.target }} -m ${{ matrix.df_wheel }}/Cargo.toml -i python${{ matrix.python.version }} -o target/wheels/
 
       - name: Build wheel windows
         if: matrix.os == 'windows-latest'
         run: |
           mkdir -p target/wheels target/repaired
-          maturin build --release --target=${{ matrix.target }} -m ${{ matrix.df_wheel }}/Cargo.toml -i python.exe -o target/wheels/
+          maturin build --profile=release-lto --target=${{ matrix.target }} -m ${{ matrix.df_wheel }}/Cargo.toml -i python.exe -o target/wheels/
           pip install delvewheel wheel
           delvewheel repair target/wheels/DeepFilterLib-*.whl -w target/repaired
           mv target/repaired/* target/wheels/
 
       - uses: actions/upload-artifact@v2
         with:
-          name: libdf-wheels-${{github.ref_name}}
+          name: libdf-wheels-${{ needs.create-release.outputs.df_version }}
           path: target/wheels/
+      # - name: Upload release archive
+      #   uses: actions/upload-release-asset@v1.0.2
+      #   env:
+      #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      #   with:
+      #     upload_url: ${{ needs.create-release.outputs.upload_url }}
+      #     asset_path: target/wheels/DeepFilterLib-${{ needs.create-release.outputs.df_version }}*.whl
+      #     asset_name: libdf-wheel-${{ needs.create-release.outputs.df_version }}-py${{ matrix.python.version }}-${{ matrix.target }}.whl
+      #     asset_content_type: application/x-wheel+zip
 
   build-deepfilternet-wheels:
+    needs: ['create-release']
     strategy:
       fail-fast: false
       matrix:
-        python-version: ["3.10"]  # wheel will be independent of python version
+        python-version: ["3.10"] # wheel will be independent of python version
     runs-on: ubuntu-18.04
     steps:
       - uses: actions/checkout@v2
@@ -123,11 +164,20 @@ jobs:
         working-directory: DeepFilterNet
       - uses: actions/upload-artifact@v2
         with:
-          name: deepfilternet-wheels-${{github.ref_name}}
+          name: deepfilternet-wheels-${{ needs.create-release.outputs.df_version }}
           path: DeepFilterNet/dist/
+      # - name: Upload release archive
+      #   uses: actions/upload-release-asset@v1.0.2
+      #   env:
+      #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      #   with:
+      #     upload_url: ${{ needs.create-release.outputs.upload_url }}
+      #     asset_path: DeepFilterNet/dist/DeepFilterNet-${{ needs.create-release.outputs.df_version }}*.whl
+      #     asset_name: deepfilternet-wheel-${{ needs.create-release.outputs.df_version }}.whl
+      #     asset_content_type: application/x-wheel+zip
 
   publish-pypi-wheels:
-    runs-on: ubuntu-18.04
+    runs-on: ubuntu-22.04
     needs: [build-libdf-wheels, build-deepfilternet-wheels]
     steps:
       - uses: actions/setup-python@v2
@@ -151,3 +201,241 @@ jobs:
         run: |
           maturin upload -u "$USER" -p "$PW" libdf-wheels/*"$DF_VERSION"*
           maturin upload -u "$USER" -p "$PW" deepfilternet-wheels/*"$DF_VERSION"*
+
+  build-arm-wheels:
+    name: Cross Compile ARM Python Wheels
+    needs: ['create-release']
+    runs-on: ubuntu-latest
+    strategy:
+      fail-fast: true
+      matrix:
+        rust: [stable]
+        manylinux: [2014]
+        python:
+          # CPython
+          - version: "3.8"
+            abi: cp38-cp38
+          - version: "3.9"
+            abi: cp39-cp39
+          - version: "3.10"
+            abi: cp310-cp310
+        platform:
+          - target: aarch64-unknown-linux-gnu
+            arch: aarch64
+          - target: armv7-unknown-linux-gnueabihf
+            arch: armv7
+    container:
+      image: docker://messense/manylinux${{matrix.manylinux}}-cross:${{matrix.platform.arch}}
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v3
+      - name: Install Rust (${{matrix.rust}})
+        uses: actions-rs/toolchain@v1
+        with:
+          profile: minimal
+          toolchain: ${{matrix.rust}}
+          override: true
+          target: ${{matrix.platform.target}}
+      - name: Rust cache
+        uses: Swatinem/rust-cache@v2
+        with:
+          key: ${{matrix.manylinux}}-${{matrix.platform.arch}}
+      - name: Set Python Version
+        run: |
+          echo "PYO3_CROSS_PYTHON_VERSION=${{matrix.python.version}}" >> $GITHUB_ENV
+          echo "PYO3_CROSS_LIB_DIR=/opt/python/${{matrix.python.abi}}" >> $GITHUB_ENV
+      - name: Build DeepFilterLib wheel
+        run: |
+          sudo python3 -m pip install maturin
+          maturin build --release -o dist \
+            -i python3.9 \
+            --target ${{ matrix.platform.target }} \
+            --manylinux ${{ matrix.manylinux }} \
+            -m pyDF/Cargo.toml
+      - uses: actions/upload-artifact@v3
+        with:
+          name: libdf-arm-wheels
+          path: dist/
+
+  build-deepfilter-rs:
+    needs: ['create-release']
+    runs-on: ${{ matrix.os }}
+    env:
+      # For some builds, we use cross to test on 32-bit and big-endian
+      # systems.
+      CARGO: cargo
+      # When CARGO is set to CROSS, this is set to `--target matrix.target`.
+      TARGET_FLAGS: ""
+      # When CARGO is set to CROSS, TARGET_DIR includes matrix.target.
+      TARGET_DIR: ./target
+      # Emit backtraces on panics.
+      RUST_BACKTRACE: 1
+    strategy:
+      matrix:
+        build: [linux-x86, linux-arm-v7, linux-arm-aarch64, macos-x86, macos-aarch64, win-msvc]
+        include:
+          - build: linux-x86
+            os: ubuntu-22.04
+            target: x86_64-unknown-linux-musl
+          - build: linux-arm-v7
+            os: ubuntu-22.04
+            target: armv7-unknown-linux-gnueabihf
+          - build: linux-arm-aarch64
+            os: ubuntu-22.04
+            target: aarch64-unknown-linux-gnu
+          - build: macos-x86
+            os: macos-12
+            target: x86_64-apple-darwin
+          - build: macos-aarch64
+            os: macos-12
+            target: aarch64-apple-darwin
+          - build: win-msvc
+            os: windows-2022
+            target: x86_64-pc-windows-msvc
+    defaults:
+      run:
+        shell: bash
+    steps:
+      - uses: actions/checkout@v3
+
+      - name: Install Rust
+        uses: dtolnay/rust-toolchain@master
+        with:
+          toolchain: stable
+          target: ${{ matrix.target }}
+
+      - name: Use Cross
+        shell: bash
+        run: |
+          cargo install cross
+          echo "CARGO=cross" >> $GITHUB_ENV
+          echo "TARGET_FLAGS=--target ${{ matrix.target }}" >> $GITHUB_ENV
+          echo "TARGET_DIR=./target/${{ matrix.target }}" >> $GITHUB_ENV
+
+      - name: Show command used for Cargo
+        run: |
+          echo "cargo command is: ${{ env.CARGO }}"
+          echo "target flag is: ${{ env.TARGET_FLAGS }}"
+          echo "target dir is: ${{ env.TARGET_DIR }}"
+          echo "DF_VERSION=${{ needs.create-release.outputs.df_version }}" >> $GITHUB_ENV
+          echo "DF version is: ${{ env.DF_VERSION }}"
+
+      - name: Build release binary
+        run: ${{ env.CARGO }} build --verbose --features bin,tract,use-jemalloc,wav-utils --profile=release-lto -p deep_filter --bin deep-filter ${{ env.TARGET_FLAGS }}
+
+      - name: Rename to target
+        run: |
+          mv "target/${{ matrix.target }}/release-lto/deep-filter" "${{ env.TARGET_DIR }}/deep-filter-${{ env.DF_VERSION }}-${{ matrix.target }}"
+
+      - uses: actions/upload-artifact@v3
+        with:
+          name: deep-filter-${{ env.DF_VERSION }}-${{ matrix.target }}
+          path: ${{ env.TARGET_DIR }}/deep-filter-${{ env.DF_VERSION }}-${{ matrix.target }}*
+
+      - name: Upload release archive
+        uses: actions/upload-release-asset@v1.0.2
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          upload_url: ${{ needs.create-release.outputs.upload_url }}
+          asset_name: deep-filter-${{ env.DF_VERSION }}-${{ matrix.target }}
+          asset_path: ${{ env.TARGET_DIR }}/deep-filter-${{ env.DF_VERSION }}-${{ matrix.target }}*
+          asset_content_type: application/octet-stream
+
+  build-deepfilter-ladspa:
+    needs: ['create-release']
+    runs-on: ${{ matrix.os }}
+    env:
+      # For some builds, we use cross to test on 32-bit and big-endian
+      # systems.
+      CARGO: cargo
+      # When CARGO is set to CROSS, this is set to `--target matrix.target`.
+      TARGET_FLAGS: ""
+      # When CARGO is set to CROSS, TARGET_DIR includes matrix.target.
+      TARGET_DIR: ./target
+      # Emit backtraces on panics.
+      RUST_BACKTRACE: 1
+    strategy:
+      fail-fast: false
+      matrix:
+        build: [linux-x86, linux-arm-v7, linux-arm-aarch64, macos-x86, macos-aarch64, win-msvc]
+        include:
+          - build: linux-x86
+            os: ubuntu-22.04
+            target: x86_64-unknown-linux-gnu
+            libname: libdeep_filter_ladspa
+            libext: so
+          - build: linux-arm-v7
+            os: ubuntu-22.04
+            target: armv7-unknown-linux-gnueabihf
+            libname: libdeep_filter_ladspa
+            libext: so
+          - build: linux-arm-aarch64
+            os: ubuntu-22.04
+            target: aarch64-unknown-linux-gnu
+            libname: libdeep_filter_ladspa
+            libext: so
+          - build: macos-x86
+            os: macos-12
+            target: x86_64-apple-darwin
+            libname: libdeep_filter_ladspa
+            libext: dylib
+          - build: macos-aarch64
+            os: macos-12
+            target: aarch64-apple-darwin
+            libname: libdeep_filter_ladspa
+            libext: dylib
+          - build: win-msvc
+            os: windows-2022
+            target: x86_64-pc-windows-msvc
+            libname: deep_filter_ladspa
+            libext: dll
+    defaults:
+      run:
+        shell: bash
+    steps:
+      - uses: actions/checkout@v3
+
+      - name: Install Rust
+        uses: dtolnay/rust-toolchain@master
+        with:
+          toolchain: stable
+          target: ${{ matrix.target }}
+
+      - name: Use Cross
+        shell: bash
+        run: |
+          cargo install cross
+          echo "CARGO=cross" >> $GITHUB_ENV
+          echo "TARGET_FLAGS=--target ${{ matrix.target }}" >> $GITHUB_ENV
+          echo "TARGET_DIR=./target/${{ matrix.target }}" >> $GITHUB_ENV
+
+      - name: Show command used for Cargo
+        run: |
+          echo "cargo command is: ${{ env.CARGO }}"
+          echo "target flag is: ${{ env.TARGET_FLAGS }}"
+          echo "target dir is: ${{ env.TARGET_DIR }}"
+          echo "DF_VERSION=${{ needs.create-release.outputs.df_version }}" >> $GITHUB_ENV
+          echo "DF version is: ${{ env.DF_VERSION }}"
+
+      - name: Build release binary
+        run: ${{ env.CARGO }} build --profile=release-lto -p deep-filter-ladspa ${{ env.TARGET_FLAGS }}
+
+      - name: Rename to target
+        run: |
+          mv "target/${{ matrix.target }}/release-lto/${{ matrix.libname }}.${{ matrix.libext }}" "${{ env.TARGET_DIR }}/libdeep_filter_ladspa-${{ env.DF_VERSION }}-${{ matrix.target }}.${{ matrix.libext }}"
+
+      - uses: actions/upload-artifact@v3
+        with:
+          name: libdeep_filter_ladspa-${{ env.DF_VERSION }}-${{ matrix.target }}
+          path: ${{ env.TARGET_DIR }}/${{ matrix.libname }}-${{ env.DF_VERSION }}-${{ matrix.target }}.${{ matrix.libext }}
+
+      - name: Upload release archive
+        uses: actions/upload-release-asset@v1.0.2
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          upload_url: ${{ needs.create-release.outputs.upload_url }}
+          asset_name: libdeep_filter_ladspa-${{ env.DF_VERSION }}-${{ matrix.target }}
+          asset_path: ${{ env.TARGET_DIR }}/${{ matrix.libname }}-${{ env.DF_VERSION }}-${{ matrix.target }}.${{ matrix.libext }}
+          asset_content_type: application/octet-stream
