--- a/pyDF-data/Cargo.toml
+++ b/pyDF-data/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "DeepFilterDataLoader"
-version = "0.2.6-pre"
+version = "0.3.0"
 authors = ["Hendrik Schröter"]
 edition = "2021"
 
