--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -18,6 +18,9 @@ jobs:
       upload_url: ${{ steps.release.outputs.upload_url }}
       df_version: ${{ env.DF_VERSION }}
     steps:
+      - name: Checkout DeepFilterNet
+        uses: actions/checkout@v3
+
       - name: Install Rust
         uses: dtolnay/rust-toolchain@master
         with:
