--- a/.github/workflows/rust_lint.yml
+++ b/.github/workflows/rust_lint.yml
@@ -82,6 +82,7 @@ jobs:
           - build: win-msvc
             os: windows-2022
             target: x86_64-pc-windows-msvc
+            ext: .exe
     defaults:
       run:
         shell: bash
@@ -123,15 +124,14 @@ jobs:
           echo "target dir is: ${{ env.TARGET_DIR }}"
           echo "DF_VERSION=${{ needs.create-release.outputs.df_version }}" >> $GITHUB_ENV
           echo "DF version is: ${{ env.DF_VERSION }}"
-          echo "DF_BIN_NAME=deep-filter-${{ env.DF_VERSION }}-${{ matrix.target }}" >> $GITHUB_ENV
+          echo "DF_BIN_NAME=deep-filter-${{ env.DF_VERSION }}-${{ matrix.target }}${{ matrix.ext }}" >> $GITHUB_ENV
 
       - name: Build release binary
         run: ${{ env.CARGO }} build --verbose --features bin,tract,use-jemalloc,wav-utils --profile=release -p deep_filter --bin deep-filter ${{ env.TARGET_FLAGS }}
 
       - name: Rename to target
         run: |
-          ls "target/${{ matrix.target }}/release/"
-          mv "target/${{ matrix.target }}/release/deep-filter" "${{ env.TARGET_DIR }}/${{ env.DF_BIN_NAME }}"
+          mv "target/${{ matrix.target }}/release/deep-filter${{ matrix.ext }}" "${{ env.TARGET_DIR }}/${{ env.DF_BIN_NAME }}"
           chmod +x "${{ env.TARGET_DIR }}/${{ env.DF_BIN_NAME }}"
 
       - uses: actions/upload-artifact@v3
