ladspa: Allow to set attenuation limit

--- a/ladspa/filter-chain-configs/deepfilter-mono-source.conf
+++ b/ladspa/filter-chain-configs/deepfilter-mono-source.conf
@@ -10,13 +10,17 @@
 #     or locally:
 #     ~/.ladspa/libdeep_filter_ladspa.so
 #
-# 3. Adjust the plugin path (line 31) accordingly. If you installed the plugin
+# 3. Adjust the plugin path (line 35) accordingly. If you installed the plugin
 #     locally in your home directory, make sure to provide an absolute path here
 #     (i.e. /home/<your-user-name/.ladspa/) and do not use '~' or '$HOME'!
 #
-# 4. Run the DeepFilter pipewire filter via `pipewire -c filter-chain.conf`
+# 4. You may limit the noise attenuation (i.e. don't reduce all noise) by setting
+#     'Attenuation Limit (dB)' to a smaller value. For little noise reduction, try
+#     6-12, for medium noise reduction 18-24 dB. 100 dB means no attenuation limit.
 #
-# 5. Select the DeepFilter microphone in your VoIP application like Zoom or Discord
+# 5. Run the DeepFilter pipewire filter via `pipewire -c filter-chain.conf`
+#
+# 6. Select the DeepFilter microphone in your VoIP application like Zoom or Discord
 
 context.modules = [
     { name = libpipewire-module-filter-chain
@@ -30,6 +34,9 @@ context.modules = [
                         name   = "DeepFilter Mono"
                         plugin = /usr/lib/ladspa/libdeep_filter_ladspa.so
                         label  = deep_filter_mono
+                        control = {
+                            "Attenuation Limit (dB)" 100
+                        }
                     }
                 ]
             }
