--- a/ladspa/filter-chain-configs/deepfilter-stereo-sink.conf
+++ b/ladspa/filter-chain-configs/deepfilter-stereo-sink.conf
@@ -10,13 +10,17 @@
 #     or locally:
 #     ~/.ladspa/libdeep_filter_ladspa.so
 #
-# 3. Adjust the plugin path (line 34) accordingly. If you installed the plugin
+# 3. Adjust the plugin path (line 38) accordingly. If you installed the plugin
 #     locally in your home directory, make sure to provide an absolute path here
 #     (i.e. /home/<your-user-name/.ladspa/) and do not use '~' or '$HOME'!
 #
-# 4. Run the DeepFilter pipewire filter via `pipewire -c filter-chain.conf`
+# 4. You may limit the noise attenuation (i.e. don't reduce all noise) by setting
+#     'Attenuation Limit (dB)' to a smaller value. For little noise reduction, try
+#     6-12, for medium noise reduction 18-24 dB. 100 dB means no attenuation limit.
 #
-# 5. Select the DeepFilter sink (e.g. in pavucontrol) for an application that
+# 5. Run the DeepFilter pipewire filter via `pipewire -c filter-chain.conf`
+#
+# 6. Select the DeepFilter sink (e.g. in pavucontrol) for an application that
 #     currently plays some audio (i.e. Browser, Zoom, Discord, etc.).
 #     DeepFilterNet will denoise the application output and will playback the
 #     enhanced audio on your default sink (speakers, headphone).
@@ -33,6 +37,9 @@ context.modules = [
                         name   = "DeepFilter Stereo"
                         plugin = /usr/lib/ladspa/libdeep_filter_ladspa.so
                         label  = deep_filter_stereo
+                        control = {
+                            "Attenuation Limit (dB)" 100
+                        }
                     }
                 ]
             }
