--- a/libDF/Cargo.toml
+++ b/libDF/Cargo.toml
@@ -108,10 +108,10 @@ bincode = { version = "2.0.0-rc", default-features = false, features = [
 env_logger = { version = "0.9", optional = true }
 clap = { version = "4.0", optional = true, features = ["derive"] }
 rust-ini = { version = "^0.18", optional = true }
-tract-core = { version = "^0.18.2", optional = true }
-tract-onnx = { version = "^0.18.2", optional = true }
-tract-pulse = { version = "^0.18.2", optional = true }
-tract-hir = { version = "^0.18.2", optional = true }
+tract-core = { version = "^0.18.3-pre", optional = true , git = "https://github.com/sonos/tract" }
+tract-onnx = { version = "^0.18.3-pre", optional = true , git = "https://github.com/sonos/tract" }
+tract-pulse = { version = "^0.18.3-pre", optional = true, git = "https://github.com/sonos/tract"  }
+tract-hir = { version = "^0.18.3-pre", optional = true, git = "https://github.com/sonos/tract" }
 flate2 = { version = "1.0.24", optional = true }
 tar = { version = "0.4.38", optional = true }
 
