--- a/pyDF/pyproject.toml
+++ b/pyDF/pyproject.toml
@@ -17,7 +17,7 @@ strip = true
 
 [tool.black]
 line-length = 100
-target-version = ["py37", "py38", "py39", "py310"]
+target-version = ["py38", "py39", "py310"]
 include = '\.pyi?$'
 
 [tool.isort]
