--- a/ladspa/Cargo.toml
+++ b/ladspa/Cargo.toml
@@ -14,4 +14,5 @@ deep_filter = { path = "../libDF", features = ["tract", "use-jemalloc"] }
 ladspa = "0.3.4"
 ndarray = "^0.15"
 env_logger = "0.9"
+uuid = { version = "1.2.1", features = ["v4", "fast-rng"] }
 log = { version = "0.4", features = ["std"] }
