--- a/pyDF/Cargo.toml
+++ b/pyDF/Cargo.toml
@@ -3,6 +3,7 @@ name = "DeepFilterLib"
 version = "0.3.2-pre"
 authors = ["Hendrik Schröter"]
 edition = "2021"
+rust-version = "1.60"
 
 [lib]
 name = "libdf"
