ci: Reduce retention days

--- a/.github/workflows/build_capi.yml
+++ b/.github/workflows/build_capi.yml
@@ -116,3 +116,4 @@ jobs:
         with:
           name: clib-${{ matrix.target }}
           path: ${{ env.TARGET_DIR }}/usr
+          retention-days: 7
